# vsti

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  bundle_macos.sh  graphicsOLD.rs  nallukkashader.frag  shader.frag  shader.vert  shader2.frag  shader2.vert
assets/fonts/: LICENSE.md
assets/shaders/: prototype1.klproj  prototype2.klproj  prototype3.klproj  shader.frag  shader.vert  shaderProto.frag  test.klproj  test2.klproj
src/: lib.rs  plugin_state.rs  wave_math.rs
src/dsp/: mod.rs
src/editor/: mod.rs
src/editor/interface/: graphics.rs  mod.rs  state.rs
src/uiserver/: mod.rs
src/wave_table/: mod.rs
