[package]
name = "machine_elf"
version = "0.1.1"
authors = ["Jlfo"]
edition = "2018"
resolver = "2"
license = "MIT OR Apache-2.0"
build = "build.rs"

# No reason to distribute a VST plugin on crates.io.
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vst = "^ 0.2.1"
#vst_window = "^ 0.3"
vst_window = { git = "https://github.com/Schuwi/vst_window", rev = "f97b545" }
once_cell = "^ 1.4"
wgpu = { version = "^ 0.12", features = ["spirv"] }
wgpu_glyph = "^ 0.16"
raw-window-handle = "^ 0.4"
zerocopy = "^ 0.3"
cgmath = "^ 0.17"
futures = "^ 0.3"
png = "^ 0.16"
log = "0.4"
env_logger = "0.10.0"
rand = "0.8.5"


[target.'cfg(target_os = "windows")'.dependencies]
windebug_logger =  "0.1.4"

[build-dependencies]
glsl-to-spirv = "^ 0.1"
